# University

./: README.md
Code/2048/: .gitignore  Makefile  board.cpp  board.hpp  game.cpp  game.hpp  resourceHandler.cpp  resourceHandler.hpp  tile.cpp  tile.hpp
Code/2048/resources/: 1024  128  16  256  32  4  512  64  8  base
Code/BinaryTree/: BinaryTree.cpp  BinaryTree.h  fraction.h  head.h  main(1).cpp  main.cpp  main1.cpp  node.hpp  tree.hpp
Code/DataStructure/Kittens_attack!/: CMakeLists.txt
Code/DataStructure/Kittens_attack!/source/: CMakeLists.txt  Kittens.cpp  pch.h
Code/DataStructure/Kittens_attack!/source/include/: CMakeLists.txt  List.h  Stack.h
Code/DataStructure/Kittens_attack!/source/include/gui/: CMakeLists.txt  CatHelper.h  CatHelper.ui  CatReaction.h  MainWindow.h  MainWindow.ui
Code/DataStructure/Kittens_attack!/source/include/tools/: CMakeLists.txt  CatHelperSerializer.h
Code/DataStructure/Kittens_attack!/source/lib/json/: CMakeLists.txt
Code/DataStructure/Kittens_attack!/source/resources/: resources.qrc
Code/DataStructure/Kittens_attack!/source/src/: CMakeLists.txt  List.cpp  Stack.cpp
Code/DataStructure/Kittens_attack!/source/src/gui/: CMakeLists.txt  CatHelper.cpp  MainWindow.cpp
Code/DataStructure/Kittens_attack!/source/src/tools/: CMakeLists.txt  CatHelperSerializer.cpp
Code/DataStructure/Kittens_attack_3!/: CMakeLists.txt
Code/DataStructure/Kittens_attack_3!/cmake/: set_precompiled_header.cmake
Code/DataStructure/Kittens_attack_3!/source/: CMakeLists.txt  Tests.cpp  main.cpp  pch.h
Code/DataStructure/Kittens_attack_4!/: CMakeLists.txt
Code/DataStructure/Kittens_attack_4!/cmake/: CMakeLists.txt
Code/DataStructure/Kittens_attack_4!/source/: CMakeLists.txt  main.cpp
Code/DataStructure/Kittens_attack_4!/source/include/: CMakeLists.txt  HashMap.h
Code/DataStructure/Kittens_attack_4!/source/include/gui/: CMakeLists.txt  mainwindow.h  mainwindow.ui
Code/DataStructure/Kittens_attack_4!/source/src/: CMakeLists.txt  HashMap.cpp  Test.cpp  Tree.cpp
Code/DataStructure/Kittens_attack_4!/source/src/gui/: CMakeLists.txt  MainWindow.cpp
Code/DataStructure/Kittens_buffer!/: !build_project.cmd  !open_project.cmd
Code/STL/lab_1/: Calendar.cpp  Calendar.hpp  Date.cpp  Date.hpp  main.cpp
Code/STL/lab_2/: STL2.cpp  main.cpp  metainfo.cpp  metainfo.hpp  test.txt
Code/TechnogyOfProgramming/Array_lr2/: Array_lr2.sln
Code/TechnogyOfProgramming/Array_lr2/Array_lr2/: Array_lr2.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Code/TechnogyOfProgramming/Calculator_v2/: Calculator_v2.sln
Code/TechnogyOfProgramming/Calculator_v2/Calculator_v2/: Calculator_v2.csproj  Form1.Designer.cs  Form1.cs
Code/TechnogyOfProgramming/Chart_lr6/: Chart_lr6.sln
Code/TechnogyOfProgramming/Chart_lr6/Chart_lr6/: Chart_lr6.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Code/TechnogyOfProgramming/Classes_lr5/: Classes_lr5.sln
Code/TechnogyOfProgramming/Classes_lr5/Classes_lr5/: Classes_lr5.csproj  Program.cs
Code/TechnogyOfProgramming/Crypto_kr/: Crypto_kr.sln
Code/TechnogyOfProgramming/Crypto_kr/Crypto_kr/: Crypto_kr.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Code/TechnogyOfProgramming/DataGrid_lr3/: DataGrid_lr3.sln
Code/TechnogyOfProgramming/DataGrid_lr3/DataGrid_lr3/: DataGrid_lr3.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Code/TechnogyOfProgramming/Drawing_lr8/Drawing_lr8/: Drawing_lr8.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Code/TechnogyOfProgramming/Drawing_v2_lr8/: Drawing_lr8.sln
Code/TechnogyOfProgramming/Drawing_v2_lr8/Drawing_lr8/: Form1.Designer.cs  Form1.cs
Code/TechnogyOfProgramming/Images_lr9/: Images_lr9.sln
Code/TechnogyOfProgramming/Images_lr9/Images_lr9/: Form1.Designer.cs  Form1.cs  Images_lr9.csproj  (+1 more)
Code/TechnogyOfProgramming/Paint_lr7/: Paint_lr7.sln
Code/TechnogyOfProgramming/TypeString_lr1/: TypeString_lr1.sln
Code/TechnogyOfProgramming/TypeString_lr4/: TypeString_lr4.sln
Code/TextEncryptor/: TextEncryptor.sln
Code/TextEncryptor/TextEncryptor/: Form1.Designer.cs  Form1.cs  Program.cs  TextEncryptor.csproj
Code/WinApi/lab1_qt/: lab1_qt.sln
Code/WinApi/lab1_qt_cmake/: !!open_project.cmd  CMakeLists.txt
Code/WinApi/lab1_qt_cmake/includes/: ProcessManager.h  lab1_qt.h
Code/WinApi/lab1_qt_cmake/sources/: ProcessManager.cpp  lab1_qt.cpp  main.cpp
Code/WinApi/lab1_qt_cmake/ui/: lab1_qt.ui
Code/WinApi/lab2_qt/: lab2_qt.sln
Code/WinApi/lab2_qt_cmake/: !!open_project.cmd  CMakeLists.txt
Code/WinApi/lab2_qt_cmake/includes/: SyncManager.h  SyncManagerWinImpl.h  ThreadManager.h  ThreadManagerWinImpl.h  WinApiUtils.h  lab2_qt.h  stdafx.h
Code/WinApi/lab2_qt_cmake/resources/: lab2_qt.qrc
Code/WinApi/lab2_qt_cmake/sources/: SyncManager.cpp  SyncManagerWinImpl.cpp  ThreadManager.cpp  ThreadManagerWinImpl.cpp  WinApiUtils.cpp  lab2_qt.cpp  main.cpp
Code/WinApi/lab2_qt_cmake/ui/: lab2_qt.ui
Code/WinApi/lab2_qt_cmake_light_edition_v2/: !!open_project.cmd  CMakeLists.txt  Synchronizer.cpp  Synchronizer.h  Synchronizer.ui  ThreadManager.cpp  ThreadManager.h  main.cpp  stdafx.h
Code/WinApi/lab4_qt_cmake/: !!open_project.cmd  CMakeLists.txt
Code/WinApi/lab4_qt_cmake/launcher/: CMakeLists.txt  LauncherGui.cpp  LauncherGui.ui
Code/WinApi/lab4_qt_cmake/worker/: CMakeLists.txt  worker.ui
Code/WinApi/lab4_qt_cmake_v2/: !!open_project.cmd  CMakeLists.txt
Code/WinApi/lab4_qt_cmake_v2/sources/launcher/: CMakeLists.txt  Launcher.cpp
Code/WinApi/lab4_qt_cmake_v2/sources/worker/: CMakeLists.txt  main.cpp  worker.cpp
Code/WinApi/lab4_qt_cmake_v3/: !!open_project.cmd  CMakeLists.txt
Code/WinApi/lab4_qt_cmake_v3/common/mylib/: CMakeLists.txt
Code/WinApi/lab4_qt_cmake_v3/common/mylib/include/: ipc.h  sync.h  utils.h
Code/WinApi/lab4_qt_cmake_v3/common/mylib/source/: ipc.cpp  sync.cpp  utils.cpp
Code/WinApi/lab4_qt_cmake_v3/launcher/: CMakeLists.txt
Code/WinApi/lab4_qt_cmake_v3/launcher/include/: GeneratorId.h  Launcher.h  LauncherGui.h
Code/WinApi/lab4_qt_cmake_v3/launcher/source/: GeneratorId.cpp  Launcher.cpp  LauncherGui.cpp  main.cpp
Code/site/: index.html  style.css
(+98 files in other folders)
